welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:10: error: ';' expected but 'return' found.
  } return maxi-mini
    ^